# touhou-wallpaper

./: .env.example  .gitconfig.local  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTENT.md  PRD.md  PROGRESS.md  README.md  RESEARCH.md  VERIFY.md  autofix-outcome.txt  check-summary.txt  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.cursor/: hooks.json
.cursor/hooks/: stop-core-tests.mjs
.cursor/rules/: progress-harness.mdc
.github/: cursor-agent-autofix-prompt.md  cursor-agent-review-prompt.md
.github/scripts/: ci_autofix_loop.sh
.github/workflows/: build.yml  ci.yml  cursor-agent-autofix.yml  cursor-agent-review.yml  release.yml  test.yml
assets/: README.md
docs/: SHARE.md
docs/dev/: AGENTS.md  ARCHITECTURE.md  AUTO_REVIEW_SETUP.md  PROGRESS.md  REFACTOR_PLAN.md  REVIEW_CHECKLIST.md  TECH_DESIGN.md  (+2 more)
openspec/: README.md
scripts/: apply_wallpaper.py  download_assets.py  generate_icon.py  register_dev_autostart.ps1  rename_installer.py  start_dev_server.ps1  unregister_dev_autostart.ps1  verify_favorites_gallery.py  verify_m0.py  verify_m1.py  verify_m2.py  verify_m3.py  verify_m4.py  verify_m5.py  verify_m6.py  verify_m7.py  verify_m8.py  verify_m9.py  wallpaper_service.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assets.rs  download.rs  favorites.rs  mod.rs  wallpaper.rs
src-tauri/src/models/: types.rs
src-tauri/src/services/: assets.rs  favorites_storage.rs  http.rs  manifest.rs  mod.rs  registry.rs
(+81 files in other folders)
